buildscript {
	ext {
		springBootVersion = '2.1.2.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
    id 'com.github.spotbugs' version '1.6.9'
	id 'checkstyle'
	id 'java'
	id 'org.springframework.boot' version '2.1.2.RELEASE'
	id 'io.spring.dependency-management' version '1.0.6.RELEASE'
}

group = 'de.hhu'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

checkstyle {
	toolVersion '8.17'
	configFile file("config/checkstyle/checkstyle.xml")
}

checkstyleMain {
	source ='src/main/java'
}

checkstyleTest {
	source ='src/test/java'
}

// spotbugs {
//   toolVersion = '3.1.11'
// }

// To generate an HTML report instead of XML
tasks.withType(com.github.spotbugs.SpotBugsTask) {
	reports.xml.enabled = false
	reports.html.enabled = true
}

dependencies {
  //javax.xml.bind
	compile 'javax.xml.bind:jaxb-api:2.3.0'
	testCompile 'javax.xml.bind:jaxb-api:2.3.0'

  //jpa
	compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.2.RELEASE'

  //devtools
	runtime 'org.springframework.boot:spring-boot-devtools:2.1.2.RELEASE'
	compile 'mysql:mysql-connector-java:8.0.13'
	runtimeOnly 'com.h2database:h2:1.4.197'

	implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.1.2.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.1.2.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.1.2.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE'

  //apache commons lang
	compile 'org.apache.commons:commons-lang3:3.8.1'
  
  //lombok, annotation processor
	compileOnly 'org.projectlombok:lombok:1.18.4'
	annotationProcessor 'org.projectlombok:lombok:1.18.4'
  
  //spring security
	compile 'org.springframework.boot:spring-boot-starter-security:2.1.2.RELEASE'
	compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
  
  //testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.2.RELEASE'
	testImplementation 'org.springframework.security:spring-security-test:5.1.3.RELEASE'

	//spotbugs
//	annotationProcessor 'com.github.spotbugs:spotbugs-annotations:3.1.3'
	// spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.7.1'
	compileOnly 'net.jcip:jcip-annotations:1.0'
	compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.3'
}

tasks.register("checkstyle") {
    dependsOn 'checkstyleMain'
		dependsOn 'checkstyleTest'
}